--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -486,7 +486,8 @@
         "send-letter": "שלח את המכתב",
         "edit-letter-template": "ערוך את תבנית המכתב",
         "the-link": "הקישור",
-        "need-to-show": "יש להציג או לערוך לפני המשלוח"
+        "need-to-show": "יש להציג או לערוך לפני המשלוח",
+        "place-marker": "הזז, הגדל או הקטן את המפה לפי הצורך ואז הקלק על מקום התמונה"
     },
     "consts": {
         "vis-never": "לא ניתן לתצוגה!",
