upload group photo

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -487,7 +487,8 @@
         "edit-letter-template": "ערוך את תבנית המכתב",
         "the-link": "הקישור",
         "need-to-show": "יש להציג או לערוך לפני המשלוח",
-        "place-marker": "הזז, הגדל או הקטן את המפה לפי הצורך ואז הקלק על מקום התמונה"
+        "place-marker": "הזז, הגדל או הקטן את המפה לפי הצורך ואז הקלק על מקום התמונה",
+        "successful-save": "פרטי התמונה נשמרו בהצלחה"
     },
     "consts": {
         "vis-never": "לא ניתן לתצוגה!",
