--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -486,7 +486,8 @@
         "edit-letter-template": "Edit letter template",
         "the-link": "the link",
         "need-to-show": "Display or edit before sending",
-        "place-marker": "Move and resize the map as necessary, then click on the photo place."
+        "place-marker": "Move and resize the map as necessary, then click on the photo place.",
+        "successful-save": "Photo information saved successfully"
     },
     "consts": {
         "vis-never": "Never display!",
