--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -517,7 +517,8 @@
         "change-group": "Change group",
         "edit-item": "Edit the topic",
         "remove-item": "Remove the item",
-        "show-untagged": "--Show untagged--",
+        "show-untagged": "Show untagged",
+        "show-tagged-and-untagged": "Show tagged and untagged",
         "add-item": "Add item ",
         "duplicate": "Name already exists",
         "topic-name": "Topic name",
