--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -518,7 +518,8 @@
         "change-group": "העבר לקבוצה אחרת",
         "edit-item": "ערוך את שם ותיאור הנושא",
         "remove-item": "בטל לגמרי את הנושא",
-        "show-untagged": "--הצג בלתי מתויגים--",
+        "show-untagged": "הצג בלתי מתויגים",
+        "show-tagged-and-untagged": "הצג מתויגים ובלתי מתויגים",
         "add-item": "הוסף את ",
         "duplicate": "שם הנושא כבר בשימוש",
         "topic-name": "שם הנושא",
