--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -348,7 +348,7 @@
         "view-map": "הצג את המפה",
         "hide-map": "הסתר את המפה",
         "out-of": "מתוך ",
-        "to-see-more": "כדי לראות יותר תמונות הקטן אותן"
+        "to-see-more": "כדי לראות יותר תמונות הקטן אותן. כשתגדיל אותן מספרן לא יקטן."
     },
     "audios": {
         "audios": "הקלטות",
