--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -56,7 +56,9 @@
         "checking": "Marking the story",
         "older-links": "קישורים לאתר הישן",
         "undelete": "Recover deleted stories",
+        "undelete-now": "Recover the deleted stories",
         "delete": "Delete the checked stories",
+        "delete-forever": "Irreversibly delete stories",
         "to-the-member-page": "To the member's page",
         "to-the-photo-page": "To the photo page",
         "term-page": "From the terms dictionary",
@@ -86,7 +88,8 @@
         "topic-already-exists": "Topic already exists",
         "push-up": "Place at the top",
         "edit-filters": "Topics and keywords",
-        "date": "Date"
+        "date": "Date",
+        "delete-forever-warning": "The stories will be irreversibly deleted. Is that OK?"
     },
     "members": {
         "members": "Members",
