--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -312,6 +312,7 @@
         "candidates": "מועמדים לצרוף מתוך התמונות",
         "delete": "מחק את התמונות שנבחרו",
         "rotate": "סובב את התמונות שנבחרו",
+        "rotate-photo": "סובב את התמונה",
         "photographer-already-exists": "הצלם כבר קיים במערכת",
         "no-photographers-yet": "רשימת הצלמים ריקה עדיין",
         "no-topics-yet": "רשימת הנושאים ריקה עדיין",
@@ -352,7 +353,9 @@
         "view-map": "הצג את המפה",
         "hide-map": "הסתר את המפה",
         "out-of": "מתוך ",
-        "to-see-more": "כדי לראות יותר תמונות הקטן אותן. כשתגדיל אותן מספרן לא יקטן."
+        "to-see-more": "כדי לראות יותר תמונות הקטן אותן. כשתגדיל אותן מספרן לא יקטן.",
+        "mark-people": "סמן פרצופים",
+        "mark-articles": "סמן אובייקטים"
     },
     "audios": {
         "audios": "הקלטות",
