--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -318,6 +318,7 @@
         "search-member": "עם חבר...",
         "any-photo": "כל התמונות",
         "candidates": "מועמדים לצרוף מתוך התמונות",
+        "article-candidates": "אובייקטים מועמדים לצרוף מתוך התמונות",
         "delete": "מחק את התמונות שנבחרו",
         "rotate": "סובב את התמונות שנבחרו",
         "rotate-photo": "סובב את התמונה",
@@ -645,5 +646,6 @@
     "result6": "הודעות עזרה",
     "result8": "סרטים",
     "result9": "מסמכים",
-    "result10": "הקלטות"
+    "result10": "הקלטות",
+    "result12": "אובייקטים"
 }
