stories and articles. wip.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -27,6 +27,7 @@
         "save": "Save",
         "to-the-full-story": "To the full story",
         "associated-members": "Members associated with the story",
+        "associated-articles": "Articles associated with the story",
         "word-index": "Search words appearing in the stories",
         "languages": "Select Language",
         "arabic": "Arabic",
