in home photo strip click => full screen

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -360,6 +360,7 @@
         "chronological-order-reverse": "Chronological order reversed",
         "edit-face-location": "Edit face location",
         "click-to-identify": "Click on a face to identify a person",
+        "click-to-identify-article": "Click on an article to identify it",
         "add-details": "Add details",
         "view-map": "View map",
         "hide-map": "Hide map",
