--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -359,6 +359,7 @@
         "chronological-order-reverse": "סדר כרונולוגי הפוך",
         "edit-face-location": "לעריכת מיקום וגודל המעגל, לחץ על הכפתור הימני של העכבר או גרור את שפת המעגל או את תוכו",
         "click-to-identify": "הקלק על פרצוף כדי לזהותו",
+        "click-to-identify-article": "הקלק על אובייקט כדי לזהותו",
         "add-details": "הוסף פרטים",
         "view-map": "הצג את המפה",
         "hide-map": "הסתר את המפה",
