--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -68,6 +68,7 @@
         "by-chats": "תגובות שנוספו לאחרונה",
         "new-to-old": "חדשים תחילה",
         "old-to-new": "ישנים תחילה",
+        "by-name": "לפי שמות הספורים",
         "uploaded-any-time": "ספורים שהועלו בזמן כלשהו",
         "uploaded-today": "ספורים שהועלו היום",
         "uploaded-this-week": "ספורים שהועלו השבוע",
@@ -89,7 +90,9 @@
         "push-up": "העלה לראש הרשימה",
         "edit-filters": "נושאים ומילות מפתח",
         "date": "תאריך",
-        "delete-forever-warning": "הסיפורים יימחקו ללא אפשרות שחזור. להמשיך?"
+        "delete-forever-warning": "הסיפורים יימחקו ללא אפשרות שחזור. להמשיך?",
+        "start-name": "השם הראשון שיוצג",
+        "start-date": "התאריך הראשון שיוצג"
     },
     "members": {
         "members": "חברים",
