use list property in stories by name

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -92,7 +92,8 @@
         "date": "תאריך",
         "delete-forever-warning": "הסיפורים יימחקו ללא אפשרות שחזור. להמשיך?",
         "start-name": "השם הראשון שיוצג",
-        "start-date": "התאריך הראשון שיוצג"
+        "start-date": "התאריך הראשון שיוצג",
+        "end-of-stories": "--אין יותר ספורים--"
     },
     "members": {
         "members": "חברים",
