--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -93,7 +93,8 @@
         "date": "Date",
         "delete-forever-warning": "The stories will be irreversibly deleted. Is that OK?",
         "start-name": "Name to start with",
-        "start-date": "Date to start with"
+        "start-date": "Date to start with",
+        "end-of-stories": "--No more stories!--"
     },
     "members": {
         "members": "Members",
