--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -615,7 +615,9 @@
         "unregistered-users": "משתמשים שהרשמתם לא הושלמה",
         "merge-help-filter": "חפש נושא של הודעת עזרה",
         "no-messages-to-merge": "אין הודעות עזרה שצריך למזג",
-        "explain-accept-system": "ותר על ההתאמות וקבל את הודעת העזרה של המערכת"
+        "explain-accept-system": "ותר על ההתאמות וקבל את הודעת העזרה של המערכת",
+        "promoted-story-expiration": "כמה ימים לשמור סיפור מְקוּדָם?",
+        "changes-successfuly saved": "השינויים נשמרו בהצלחה"
     },
     "go-back": "חזור",
     "parents": "הורים",
