replace article profile photo

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -232,7 +232,7 @@
         "select_langauage": "Select language",
         "select-colors": "Select colors",
         "sharing": "Sharing",
-        "enter-text-to-replace": "Enter text to be replaced, then click on it",
+        "enter-text-to-replace": "Find the text to be replaced, then right-click on it",
         "site-header": "Site header",
         "config": "System definitions",
         "by-invitation": "Only manager adds editors",
