--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -231,7 +231,7 @@
         "select-language": "בחירת שפה",
         "select-colors": "בחירת צבעים",
         "sharing": "שיתוף",
-        "enter-text-to-replace": "הקלד את הטקסט שברצונך להחליף ואז הקלק עליו",
+        "enter-text-to-replace": "מצא את הטקסט שברצונך להחליף ואז הקלק עליו בכפתור הימני",
         "site-header": "כותרת האתר",
         "config": "הגדרות מערכת",
         "by-invitation": "צרוף עורכים בהזמנה בלבד",
