--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -377,7 +377,8 @@
         "out-of": "מתוך ",
         "to-see-more": "כדי לראות יותר תמונות הקטן אותן. כשתגדיל אותן מספרן לא יקטן.",
         "mark-people": "סמן פרצופים",
-        "mark-articles": "סמן אובייקטים"
+        "mark-articles": "סמן אובייקטים",
+        "undo-last-change": "בטל את השינוי האחרון"
     },
     "audios": {
         "audios": "הקלטות",
