--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -93,7 +93,8 @@
         "delete-forever-warning": "הסיפורים יימחקו ללא אפשרות שחזור. להמשיך?",
         "start-name": "השם הראשון שיוצג",
         "start-date": "התאריך הראשון שיוצג",
-        "end-of-stories": "--אין יותר ספורים--"
+        "end-of-stories": "--אין יותר ספורים--",
+        "sorting-key": "מפתח מיון"
     },
     "members": {
         "members": "חברים",
