view most recently added members

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -144,6 +144,7 @@
         "by-age-young-first": "צעירים תחילה",
         "by-age-old-first": "מבוגרים תחילה",
         "profile-missing-first": "חסרי תמונת פרופיל קודם",
+        "newly-added": "אלה שנוספו אחרונים תחילה",
         "member-groups": "קבוצות חברים",
         "save-member-group": "שמור קבוצת חברים",
         "load-member-group": "טען קבוצת חברים",
