--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -144,6 +144,7 @@
         "by-age-young-first": "Younger first",
         "by-age-old-first": "Older first",
         "profile-missing-first": "Missing profile photo first",
+        "newly-added": "Newly added first",
         "member-groups": "Member groups",
         "save-member-group": "Save members group",
         "load-member-group": "Load members group",
