--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -95,6 +95,7 @@
         "start-date": "התאריך הראשון שיוצג",
         "end-of-stories": "--אין יותר ספורים--",
         "sorting-key": "מפתח מיון",
+        "enter-book-name": "הקלד את שם הספר",
         "story-date": "תאריך הסיפור"
     },
     "members": {
