configure books, member of the day

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -256,6 +256,10 @@
         "new-app-disabled": "No new app button",
         "enable-articles-off": "No article detection",
         "enable-articles-on": "Enable article detection",
+        "enable-books-off": "No books",
+        "enable-books-on": "Enable books",
+        "enable-member-of-the-day-off": "No member of the day",
+        "enable-member-of-the-day-on": "Enable member of the day",
         "gallery": "Gallery",
         "audio-enabled": "Audio supported",
         "audio-disabled": "Audio not supported",
