--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -254,6 +254,10 @@
         "new-app-disabled": "ללא יצירת אתר חדש",
         "enable-articles-off": "ללא זיהוי אובייקטים",
         "enable-articles-on": "אפשר זיהוי אובייקטים",
+        "enable-books-off": "ללא ספרים",
+        "enable-books-on": "אפשר ספרים",
+        "enable-member-of-the-day-off": "ללא חבר היום",
+        "enable-member-of-the-day-on": "אפשר חבר היום",
         "gallery": "גלריה",
         "audio-enabled": "אפשר הקלטות",
         "audio-disabled": "ללא הקלטות",
