--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -89,6 +89,7 @@
         "updated-by": "Updated by",
         "topic-already-exists": "Topic already exists",
         "push-up": "Place at the top",
+        "pin-story": "Keep at the top",
         "edit-filters": "Topics and keywords",
         "date": "Date",
         "delete-forever-warning": "The stories will be irreversibly deleted. Is that OK?",
