--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -88,6 +88,7 @@
         "updated-by": "עודכן על ידי",
         "topic-already-exists": "יש כבר נושא כזה",
         "push-up": "העלה לראש הרשימה",
+        "pin-story": "הצמד לראש הרשימה",
         "edit-filters": "נושאים ומילות מפתח",
         "date": "תאריך",
         "delete-forever-warning": "הסיפורים יימחקו ללא אפשרות שחזור. להמשיך?",
