--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -274,7 +274,10 @@
         "version-time-off": "Hide version time",
         "expose-developer-on": "Show developer",
         "expose-developer-off": "Hide developer",
-        "quick-upload-photo": "Upload a photo"
+        "quick-upload-photo": "Upload a photo",
+        "advanced-options": "Advanced options",
+        "advanced-options-off": "No advanced options",
+        "advanced-options-on": "Enable advanced options"
     },
     "chats": {
         "chats": "Chats",
