use arrows to navigate full screen

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -681,6 +681,7 @@
     "result2": "Stories",
     "result3": "Photos",
     "result4": "Terms",
+    "result5": "Messages",
     "result6": "Help messages",
     "result8": "Video",
     "result9": "Document",
