--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -680,6 +680,7 @@
     "result2": "ספורים",
     "result3": "תמונות",
     "result4": "מונחים",
+    "result5": "הודעות",
     "result6": "הודעות עזרה",
     "result8": "סרטים",
     "result9": "מסמכים",
