--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -264,7 +264,7 @@
         "audio-enabled": "אפשר הקלטות",
         "audio-disabled": "ללא הקלטות",
         "site-title": "כותרת האתר",
-        "site-description": "תאור האתר",
+        "site-description": "תאור האתר למכונות חיפוש",
         "feedback-on": "הצג כפתור משוב",
         "feedback-off": "ללא כפתור משוב",
         "quick-upload-off": "ללא כפתור העלאה מהירה",
