stories by last update date

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -67,6 +67,7 @@
         "words": "Advanced search",
         "random-order": "Random Order",
         "by-chats": "View recent responses",
+        "by-update": "Most recently updated",
         "new-to-old": "New to old",
         "old-to-new": "Old to new",
         "by-name": "By name",
