--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -66,6 +66,7 @@
         "words": "חיפוש מתקדם ",
         "random-order": "ללא סדר מיוחד",
         "by-chats": "תגובות שנוספו לאחרונה",
+        "by-update": " ספורים שעודכנו לאחרונה",
         "new-to-old": "חדשים תחילה",
         "old-to-new": "ישנים תחילה",
         "by-name": "לפי שמות הספורים",
