--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -67,6 +67,8 @@
         "random-order": "ללא סדר מיוחד",
         "by-chats": "תגובות שנוספו לאחרונה",
         "by-update": " ספורים שעודכנו לאחרונה",
+        "already-approved": "הספור כבר מאושר",
+        "confirm-story": "אשר את הספור",
         "new-to-old": "חדשים תחילה",
         "old-to-new": "ישנים תחילה",
         "by-name": "לפי שמות הספורים",
