--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -70,6 +70,7 @@
         "by-update": "Most recently updated",
         "already-approved": "Story already approved",
         "confirm-story": "Confirm this story",
+        "initial_version": "Initial version of the story",
         "new-to-old": "New to old",
         "old-to-new": "Old to new",
         "by-name": "By name",
