--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -69,6 +69,7 @@
         "by-update": " ספורים שעודכנו לאחרונה",
         "already-approved": "הספור כבר מאושר",
         "confirm-story": "אשר את הספור",
+        "initial_version": "גרסה ראשונה של הסיפור",
         "new-to-old": "חדשים תחילה",
         "old-to-new": "ישנים תחילה",
         "by-name": "לפי שמות הספורים",
