--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -90,6 +90,8 @@
         "promote-selected-stories": "קדם את הספורים שנבחרו",
         "unknown-source": "מקור בלתי ידוע",
         "updated-by": "עודכן על ידי",
+        "authored-by": "חובר על ידי",
+        "at-date": "בתאריך",
         "topic-already-exists": "יש כבר נושא כזה",
         "push-up": "העלה לראש הרשימה",
         "pin-story": "הצמד לראש הרשימה",
