display story changes

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -25,6 +25,8 @@
         "cancel": "Cancel",
         "filter": "Fast search in titles and author names",
         "save": "Save",
+        "approve": "Approve",
+        "skip": "Skip",
         "to-the-full-story": "To the full story",
         "associated-members": "Members associated with the story",
         "associated-articles": "Articles associated with the story",
@@ -69,7 +71,7 @@
         "by-chats": "View recent responses",
         "by-update": "Most recently updated",
         "already-approved": "Story already approved",
-        "confirm-story": "Confirm this story",
+        "approve-story": "Approve this story",
         "initial_version": "Initial version of the story",
         "new-to-old": "New to old",
         "old-to-new": "Old to new",
