--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -22,6 +22,8 @@
         "enter-story-name": "תן כותרת לסיפור",
         "enter-story-source": "מקור הסיפור",
         "cancel": "בטל",
+        "approve": "אשר",
+        "skip": "דלג",
         "filter": "חפוש מהיר בשמות הספורים והמחברים שנמצאו",
         "save": "שמור",
         "to-the-full-story": "לסיפור המלא",
@@ -68,7 +70,7 @@
         "by-chats": "תגובות שנוספו לאחרונה",
         "by-update": " ספורים שעודכנו לאחרונה",
         "already-approved": "הספור כבר מאושר",
-        "confirm-story": "אשר את הספור",
+        "approve-story": "אשר את הספור",
         "initial_version": "גרסה ראשונה של הסיפור",
         "new-to-old": "חדשים תחילה",
         "old-to-new": "ישנים תחילה",
