--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -381,6 +381,7 @@
         "crop": "חיתוך",
         "save-crop": "שמור את החיתוך",
         "cancel-crop": "בטל את החיתוך",
+        "nobody-there": "אין את מי לזהות",
         "next-slide": "התמונה הבאה",
         "prev-slide": "התמונה הקודמת",
         "recognized": "תמונות שזוהו",
