use my-map in photo detail

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -687,6 +687,7 @@
     "by-old-count": "By old count",
     "enter-search-words": "Enter search words",
     "no-results": "No matching results found",
+    "search-location": "Search location",
     "result1": "Members",
     "result2": "Stories",
     "result3": "Photos",
