--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -686,6 +686,7 @@
     "by-old-count": "קליקים מצטברים",
     "enter-search-words": "הקלידו מילות חיפוש",
     "no-results": "<p dir='rtl'>לא נמצאו תוצאות מתאימות.<br>יש לשנות או להשמיט חלק מהמסננים</p>",
+    "search-location": "חפש מקום",
     "result1": "חברים",
     "result2": "ספורים",
     "result3": "תמונות",
