rtl / ltr in member-detail page

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -668,10 +668,10 @@
     "go-back": "חזור",
     "parents": "הורים",
     "siblings": "אחים/אחיות",
-    "wife": "בת זוג",
-    "wifes": "בנות זוג",
-    "husband": "בן זוג",
-    "husbands": "בני זוג",
+    "wife": "בת-זוג",
+    "wifes": "בנות-זוג",
+    "husband": "בן-זוג",
+    "husbands": "בני-זוג",
     "children": "ילדים",
     "topics": "נושאים",
     "copy-to-clipboard": "העתק",
